Switch to preprocessing to allow for better handling of line-internal text

--- a/verticaltext.css
+++ b/verticaltext.css
@@ -10,8 +10,14 @@
 	margin-right: -1em;
 	-webkit-transform: rotate(-90deg);
 }
+
+.other {
+	margin: 1em -1em 0 -.7em;
+	-webkit-transform: rotate(90deg);
+}
+
 .poem {
-	border: solid 2px grey;
+	border: solid 2px gray;
 }
 
 .vertical {
